src/parser/DataModelingParser.java
// Generated from DataModeling.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DataModelingParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, IDNAME=68;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_databaseexpression = 2, RULE_createclause = 3, 
		RULE_createtableclause = 4, RULE_createtablecolumns = 5, RULE_createtableaddition = 6, 
		RULE_fieldtype = 7, RULE_width = 8, RULE_widthinteger = 9, RULE_widthdecimal = 10, 
		RULE_decimaloption = 11, RULE_dateclause = 12, RULE_nullclause = 13, RULE_databaseortable = 14, 
		RULE_name = 15, RULE_onerelationexpression = 16, RULE_oldnonterminals = 17, 
		RULE_wselecting = 18, RULE_wselectoptional = 19, RULE_selectexpression = 20, 
		RULE_selectclause = 21, RULE_joinaggregategrouping = 22, RULE_setsrollupcube = 23, 
		RULE_aggregategrouping = 24, RULE_derivedtable = 25, RULE_parenthesisfieldgroup = 26, 
		RULE_parenthesisfieldmultiple = 27, RULE_groupbyclause = 28, RULE_havingclause = 29, 
		RULE_selectionone = 30, RULE_allclause = 31, RULE_distinctclause = 32, 
		RULE_selectiontwo = 33, RULE_selectionthree = 34, RULE_selectionthreeclause = 35, 
		RULE_aggregate = 36, RULE_aggregatefield = 37, RULE_table = 38, RULE_tableclause = 39, 
		RULE_tableaddition = 40, RULE_updating = 41, RULE_updateclause = 42, RULE_updateaddition = 43, 
		RULE_wupdateclause = 44, RULE_wupdateexpressionaddition = 45, RULE_optionaldate = 46, 
		RULE_whereclause = 47, RULE_insertion = 48, RULE_fieldparenthesis = 49, 
		RULE_field = 50, RULE_multiplefieldschoice = 51, RULE_multiplefields = 52, 
		RULE_literal = 53, RULE_literalclause = 54, RULE_deletion = 55, RULE_deleteaddition = 56, 
		RULE_renaming = 57, RULE_term = 58, RULE_restriction = 59, RULE_projection = 60, 
		RULE_attributecommalist = 61, RULE_attributecommalistaddition = 62, RULE_tworelationexpression = 63, 
		RULE_binaryoperation = 64, RULE_comparison = 65, RULE_compare = 66, RULE_number = 67, 
		RULE_numberclause = 68, RULE_val = 69, RULE_attribute = 70, RULE_relation = 71;
	public static final String[] ruleNames = {
		"start", "expression", "databaseexpression", "createclause", "createtableclause", 
		"createtablecolumns", "createtableaddition", "fieldtype", "width", "widthinteger", 
		"widthdecimal", "decimaloption", "dateclause", "nullclause", "databaseortable", 
		"name", "onerelationexpression", "oldnonterminals", "wselecting", "wselectoptional", 
		"selectexpression", "selectclause", "joinaggregategrouping", "setsrollupcube", 
		"aggregategrouping", "derivedtable", "parenthesisfieldgroup", "parenthesisfieldmultiple", 
		"groupbyclause", "havingclause", "selectionone", "allclause", "distinctclause", 
		"selectiontwo", "selectionthree", "selectionthreeclause", "aggregate", 
		"aggregatefield", "table", "tableclause", "tableaddition", "updating", 
		"updateclause", "updateaddition", "wupdateclause", "wupdateexpressionaddition", 
		"optionaldate", "whereclause", "insertion", "fieldparenthesis", "field", 
		"multiplefieldschoice", "multiplefields", "literal", "literalclause", 
		"deletion", "deleteaddition", "renaming", "term", "restriction", "projection", 
		"attributecommalist", "attributecommalistaddition", "tworelationexpression", 
		"binaryoperation", "comparison", "compare", "number", "numberclause", 
		"val", "attribute", "relation"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'SAVE'", "'COMMIT'", "'LOAD'", "'DATABASE'", "'CREATE'", 
		"'DROP'", "'TABLE'", "'('", "')'", "','", "'INTEGER'", "'NUMBER'", "'CHARACTER'", 
		"'DATE'", "'/'", "'NOT'", "'NULL'", "'/* empty */'", "'WSELECT'", "'FROM'", 
		"'*'", "'SELECT'", "'SUM'", "'AS'", "'GROUP'", "'BY'", "'GROUPING'", "'SETS'", 
		"'ROLLUP'", "'CUBE'", "'HAVING'", "'ALL'", "'DISTINCT'", "'COUNT'", "'AVG'", 
		"'MIN'", "'MAX'", "'UPDATE'", "'SET'", "'WUPDATE'", "'='", "':'", "'TIME'", 
		"'WHERE'", "'INSERT'", "'INTO'", "'VALUES'", "'DELETE'", "'RENAME'", "'+'", 
		"'-'", "'<'", "'>'", "'<='", "'>='", "'<>'", "'0'", "'1'", "'2'", "'3'", 
		"'4'", "'5'", "'6'", "'7'", "'8'", "'9'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "IDNAME"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DataModeling.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataModelingParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			expression();
			setState(145);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public OnerelationexpressionContext onerelationexpression() {
			return getRuleContext(OnerelationexpressionContext.class,0);
		}
		public TworelationexpressionContext tworelationexpression() {
			return getRuleContext(TworelationexpressionContext.class,0);
		}
		public DatabaseexpressionContext databaseexpression() {
			return getRuleContext(DatabaseexpressionContext.class,0);
		}
		public SelectexpressionContext selectexpression() {
			return getRuleContext(SelectexpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				onerelationexpression();
				setState(148);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				tworelationexpression();
				setState(151);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				databaseexpression();
				setState(154);
				match(T__0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				selectexpression();
				setState(157);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatabaseexpressionContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public CreateclauseContext createclause() {
			return getRuleContext(CreateclauseContext.class,0);
		}
		public DatabaseortableContext databaseortable() {
			return getRuleContext(DatabaseortableContext.class,0);
		}
		public DatabaseexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_databaseexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterDatabaseexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitDatabaseexpression(this);
		}
	}

	public final DatabaseexpressionContext databaseexpression() throws RecognitionException {
		DatabaseexpressionContext _localctx = new DatabaseexpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_databaseexpression);
		try {
			setState(172);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(T__1);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				match(T__3);
				setState(164);
				match(T__4);
				setState(165);
				name();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(166);
				match(T__5);
				setState(167);
				createclause();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(168);
				match(T__6);
				setState(169);
				databaseortable();
				setState(170);
				name();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateclauseContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public CreatetableclauseContext createtableclause() {
			return getRuleContext(CreatetableclauseContext.class,0);
		}
		public CreateclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterCreateclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitCreateclause(this);
		}
	}

	public final CreateclauseContext createclause() throws RecognitionException {
		CreateclauseContext _localctx = new CreateclauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createclause);
		try {
			setState(180);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				match(T__4);
				setState(175);
				name();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(T__7);
				setState(177);
				name();
				setState(178);
				createtableclause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatetableclauseContext extends ParserRuleContext {
		public CreatetablecolumnsContext createtablecolumns() {
			return getRuleContext(CreatetablecolumnsContext.class,0);
		}
		public CreatetableclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createtableclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterCreatetableclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitCreatetableclause(this);
		}
	}

	public final CreatetableclauseContext createtableclause() throws RecognitionException {
		CreatetableclauseContext _localctx = new CreatetableclauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createtableclause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(T__8);
			setState(183);
			createtablecolumns();
			setState(184);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatetablecolumnsContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public FieldtypeContext fieldtype() {
			return getRuleContext(FieldtypeContext.class,0);
		}
		public NullclauseContext nullclause() {
			return getRuleContext(NullclauseContext.class,0);
		}
		public CreatetableadditionContext createtableaddition() {
			return getRuleContext(CreatetableadditionContext.class,0);
		}
		public CreatetablecolumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createtablecolumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterCreatetablecolumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitCreatetablecolumns(this);
		}
	}

	public final CreatetablecolumnsContext createtablecolumns() throws RecognitionException {
		CreatetablecolumnsContext _localctx = new CreatetablecolumnsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_createtablecolumns);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			name();
			setState(187);
			fieldtype();
			setState(188);
			nullclause();
			setState(189);
			createtableaddition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatetableadditionContext extends ParserRuleContext {
		public CreatetablecolumnsContext createtablecolumns() {
			return getRuleContext(CreatetablecolumnsContext.class,0);
		}
		public CreatetableadditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createtableaddition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterCreatetableaddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitCreatetableaddition(this);
		}
	}

	public final CreatetableadditionContext createtableaddition() throws RecognitionException {
		CreatetableadditionContext _localctx = new CreatetableadditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_createtableaddition);
		try {
			setState(194);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				match(T__10);
				setState(192);
				createtablecolumns();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldtypeContext extends ParserRuleContext {
		public WidthintegerContext widthinteger() {
			return getRuleContext(WidthintegerContext.class,0);
		}
		public WidthdecimalContext widthdecimal() {
			return getRuleContext(WidthdecimalContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public DateclauseContext dateclause() {
			return getRuleContext(DateclauseContext.class,0);
		}
		public FieldtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterFieldtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitFieldtype(this);
		}
	}

	public final FieldtypeContext fieldtype() throws RecognitionException {
		FieldtypeContext _localctx = new FieldtypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldtype);
		try {
			setState(204);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				match(T__11);
				setState(197);
				widthinteger();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				match(T__12);
				setState(199);
				widthdecimal();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(200);
				match(T__13);
				setState(201);
				width();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(202);
				match(T__14);
				setState(203);
				dateclause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public WidthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_width; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterWidth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitWidth(this);
		}
	}

	public final WidthContext width() throws RecognitionException {
		WidthContext _localctx = new WidthContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_width);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(T__8);
			setState(207);
			number();
			setState(208);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthintegerContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public WidthintegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widthinteger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterWidthinteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitWidthinteger(this);
		}
	}

	public final WidthintegerContext widthinteger() throws RecognitionException {
		WidthintegerContext _localctx = new WidthintegerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_widthinteger);
		try {
			setState(215);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(210);
				match(T__8);
				setState(211);
				number();
				setState(212);
				match(T__9);
				}
				break;
			case T__16:
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthdecimalContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public DecimaloptionContext decimaloption() {
			return getRuleContext(DecimaloptionContext.class,0);
		}
		public WidthdecimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widthdecimal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterWidthdecimal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitWidthdecimal(this);
		}
	}

	public final WidthdecimalContext widthdecimal() throws RecognitionException {
		WidthdecimalContext _localctx = new WidthdecimalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_widthdecimal);
		try {
			setState(223);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(217);
				match(T__8);
				setState(218);
				number();
				setState(219);
				decimaloption();
				setState(220);
				match(T__9);
				}
				break;
			case T__16:
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecimaloptionContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public DecimaloptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimaloption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterDecimaloption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitDecimaloption(this);
		}
	}

	public final DecimaloptionContext decimaloption() throws RecognitionException {
		DecimaloptionContext _localctx = new DecimaloptionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_decimaloption);
		try {
			setState(228);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(225);
				match(T__10);
				setState(226);
				number();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateclauseContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public DateclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dateclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterDateclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitDateclause(this);
		}
	}

	public final DateclauseContext dateclause() throws RecognitionException {
		DateclauseContext _localctx = new DateclauseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_dateclause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			match(T__8);
			setState(231);
			number();
			setState(232);
			match(T__15);
			setState(233);
			number();
			setState(234);
			match(T__15);
			setState(235);
			number();
			setState(236);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NullclauseContext extends ParserRuleContext {
		public NullclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nullclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).enterNullclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataModelingListener ) ((DataModelingListener)listener).exitNullclause(this);
		}
	}
